# TinyJAMBU

./: CMakeLists.txt  README.md  config.h.in  keywords.txt  library.json  library.properties
examples/PRNG/: PRNG.ino
examples/TestTinyJAMBU/: TestTinyJAMBU.ino
src/: CMakeLists.txt  TinyJAMBU.h  tinyjambu-128-aead.c  tinyjambu-128-asm-armv6.S  tinyjambu-128-asm-armv6m.S  tinyjambu-128-asm-armv7m.S  tinyjambu-128-asm-avr5.S  tinyjambu-128-asm-riscv64i.S  tinyjambu-128-c32.c  tinyjambu-128-c64.c  tinyjambu-128-siv.c  tinyjambu-192-aead.c  tinyjambu-192-asm-armv6m.S  tinyjambu-192-asm-armv7m.S  tinyjambu-192-asm-avr5.S  tinyjambu-192-asm-riscv32e.S  tinyjambu-192-asm-riscv64i.S  tinyjambu-192-asm-xtensa.S  tinyjambu-192-c32.c  tinyjambu-192-c64.c  tinyjambu-192-siv.c  tinyjambu-256-aead.c  tinyjambu-256-asm-armv6m.S  tinyjambu-256-asm-armv7m.S  tinyjambu-256-asm-avr5.S  tinyjambu-256-asm-riscv32i.S  tinyjambu-256-asm-riscv64i.S  tinyjambu-256-asm-xtensa.S  tinyjambu-256-c32.c  tinyjambu-256-c64.c  tinyjambu-256-siv.c  tinyjambu-backend-select.h  tinyjambu-backend.h  tinyjambu-hash.c  tinyjambu-hkdf.c  tinyjambu-hmac.c  tinyjambu-pbkdf2.c  tinyjambu-prng.c  tinyjambu-util.c  tinyjambu-util.h
src/backend/: tinyjambu-128-asm-armv7m.S  tinyjambu-128-asm-avr5.S  tinyjambu-128-asm-riscv32e.S  tinyjambu-128-asm-riscv32i.S  tinyjambu-128-asm-xtensa.S  tinyjambu-192-asm-armv6.S  tinyjambu-192-asm-armv6m.S  tinyjambu-192-asm-armv7m.S  tinyjambu-192-asm-avr5.S  tinyjambu-192-asm-riscv32i.S  tinyjambu-192-c32.c  tinyjambu-256-asm-armv6.S  tinyjambu-256-asm-armv6m.S  tinyjambu-256-asm-avr5.S  tinyjambu-256-asm-riscv32e.S  tinyjambu-256-c32.c  tinyjambu-aead-common-128.c  tinyjambu-aead-common-192.c  tinyjambu-aead-common-256.c  tinyjambu-aead-common.h  tinyjambu-backend.h  tinyjambu-clean.c
src/random/: README.md  tinyjambu-trng-dev-random.c  tinyjambu-trng-due.c  tinyjambu-trng-esp.c  tinyjambu-trng-none.c  tinyjambu-trng-select.h  tinyjambu-trng-stm32.c  tinyjambu-trng-stm32.h  tinyjambu-trng-windows.c  tinyjambu-trng.h
test/: CMakeLists.txt
test/kat/: CMakeLists.txt  TinyJAMBU-HASH.txt  TinyJAMBU-HMAC.txt  aead-metadata.h  algorithms.c  internal-blake2s.c  internal-chachapoly.c  kat-gen.c
test/unit/: CMakeLists.txt  test-cipher.c  test-cipher.h  test-hkdf.c  test-pbkdf2.c  test-permutation.c
tools/genarm/: Makefile  tinyjambu_armv6m.c  tinyjambu_armv7m.c
tools/genriscv/: Makefile  tinyjambu_riscv32.c
tools/genxtensa/: Makefile  tinyjambu_xtensa.c
tools/hashref/: Makefile  README.md  api_auth.h  genkat_auth.c  hash.c  hmac.c  state.c
tools/sivref/: .gitignore  Makefile  README.md  api.h  encrypt-128.c  encrypt-192.c  encrypt-256.c
